@@ -21,6 +21,8 @@
      regress/test-exec.sh] Handle different was of echoing without newlines.
    - [regress/dynamic-forward.sh] Some "which" programs output on stderr.
    - [regress/sftp-cmds.sh] Use portable "test" option.
+   - [regress/test-exec.sh] Use sudo, search for "whoami" equivalent, always
+     use Strictmodes no, wait longer for sshd startup.
 
 20030903
  - (djm) OpenBSD CVS Sync
@@ -1011,4 +1013,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2955 2003/09/04 05:26:57 dtucker Exp $
+$Id: ChangeLog,v 1.2956 2003/09/04 05:35:48 dtucker Exp $
